--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -26,7 +26,7 @@ jobs:
       id: "auth"
       uses: "google-github-actions/auth@v2"
       with:
-        workload_identity_provider: "${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}"
+        workload_identity_provider: "${{ secrets.GCP_WIF_PROVIDER }}"
         service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
         project_id: "${{ secrets.GCP_PROJECT_ID }}"
 
