Add path filter for NCP Terraform workflow

--- a/.github/workflows/terraform-ncp.yml
+++ b/.github/workflows/terraform-ncp.yml
@@ -3,6 +3,8 @@ name: "Terraform CI - NCP"
 on:
   push:
     branches: ["main"]
+    paths:
+      - "terraform/live/ncp-active/**"
 
 permissions:
   contents: read
