Update CI workflow to trigger on specific paths

--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -3,7 +3,11 @@ name: "Terraform CI"
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - "terraform/live/gcp-standby/**"
   pull_request:
+    paths:
+      - "terraform/live/gcp-standby/**"
 
 permissions:
   contents: 'read'
