--- a/.github/workflows/terraform-ncp.yml
+++ b/.github/workflows/terraform-ncp.yml
@@ -28,10 +28,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
-        run: |
-          terraform init \
-            -backend-config="bucket=${{ secrets.GCP_TF_STATE_BUCKET }}" \
-            -backend-config="prefix=terraform/ncp-active"
+        run: terraform init
 
       - name: Terraform Plan
         run: terraform plan
