--- a/.github/workflows/terraform-ncp.yml
+++ b/.github/workflows/terraform-ncp.yml
@@ -20,8 +20,8 @@ jobs:
         working-directory: ./terraform/live/ncp-active
 
     env:
-      NCLOUD_ACCESS_KEY: ${{ secrets.NCLOUD_ACCESS_KEY }}
-      NCLOUD_SECRET_KEY: ${{ secrets.NCLOUD_SECRET_KEY }}
+      NCLOUD_ACCESS_KEY: ${{ secrets.NCP_ACCESS_KEY }}
+      NCLOUD_SECRET_KEY: ${{ secrets.NCP_SECRET_KEY }}
 
     steps:
       - uses: actions/checkout@v4
