chore: pr시 액션 트리거 지정, lock 파일 삭제(gcp)

--- a/.github/workflows/terraform-gcp.yml
+++ b/.github/workflows/terraform-gcp.yml
@@ -1,11 +1,15 @@
-name: "Terraform CI"
+name: "Terraform gcp"
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - "feature-*"
     paths:
       - "terraform/live/gcp-standby/**"
   pull_request:
+    branches:
+      - main
     paths:
       - "terraform/live/gcp-standby/**"
 
