--- a/.github/workflows/terraform-gcp.yml
+++ b/.github/workflows/terraform-gcp.yml
@@ -42,7 +42,7 @@ jobs:
       uses: hashicorp/setup-terraform@v3
 
     - name: Terraform Init
-      run: terraform init -backend-config="bucket=${{ secrets.GCP_TF_STATE_BUCKET }}"
+      run: terraform init -upgrade -backend-config="bucket=${{ secrets.GCP_TF_STATE_BUCKET }}"
 
     - name: Terraform Plan
       run: |
