--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -1,4 +1,4 @@
-name: "Deploy to GKE"
+name: "Deploy to GKE (Canary)"
 
 on:
   push:
@@ -6,6 +6,11 @@ on:
     paths:
       - 'k8s/**'
   workflow_dispatch:
+    inputs:
+      image_tag:
+        description: 'Docker image tag to deploy (e.g., v1.0.0)'
+        required: false
+        default: ''
 
 permissions:
   contents: 'read'
@@ -34,13 +39,32 @@ jobs:
         location: "${{ secrets.GCP_REGION }}-a"
         project_id: "${{ secrets.GCP_PROJECT_ID }}"
 
-    - name: Deploy to GKE
+    - name: Install Argo Rollouts CLI
       run: |
-        kubectl apply -f k8s/sample-app/
-        kubectl rollout status deployment/sample-app --timeout=60s
+        curl -LO https://github.com/argoproj/argo-rollouts/releases/latest/download/kubectl-argo-rollouts-linux-amd64
+        chmod +x kubectl-argo-rollouts-linux-amd64
+        sudo mv kubectl-argo-rollouts-linux-amd64 /usr/local/bin/kubectl-argo-rollouts
 
-    - name: Get Service IP
+    - name: Deploy Rollout
       run: |
-        echo "Waiting for LoadBalancer IP..."
-        sleep 30
-        kubectl get svc sample-app -o jsonpath='{.status.loadBalancer.ingress[0].ip}'
+        kubectl apply -f k8s/sample-app/ -n app
+
+    - name: Update Image (if specified)
+      if: ${{ github.event.inputs.image_tag != '' }}
+      run: |
+        kubectl argo rollouts set image sample-app nginx=${{ secrets.DOCKERHUB_USERNAME }}/sample-app:${{ github.event.inputs.image_tag }} -n app
+
+    - name: Watch Rollout Status
+      run: |
+        kubectl argo rollouts status sample-app --timeout=300s -n app
+
+    - name: Get Rollout Info
+      if: always()
+      run: |
+        echo "### Rollout Status" >> $GITHUB_STEP_SUMMARY
+        kubectl argo rollouts get rollout sample-app -n app
+
+    - name: Deployment Info
+      run: |
+        echo "### Service Endpoints" >> $GITHUB_STEP_SUMMARY
+        echo "Check GCP Load Balancer IP in Console" >> $GITHUB_STEP_SUMMARY
