--- a/k8s/sample-app/services.yaml
+++ b/k8s/sample-app/services.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sample-app-stable
+  namespace: app
 spec:
   selector:
     app: sample-app
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sample-app-canary
+  namespace: app
 spec:
   selector:
     app: sample-app
@@ -27,8 +29,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sample-app
+  namespace: app
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: sample-app
   ports:
