--- a/.gitignore
+++ b/.gitignore
@@ -76,4 +76,7 @@ override.tf.json
 .terraformrc
 terraform.rc
 
+venv/
+__pycache__
+
 # End of https://www.toptal.com/developers/gitignore/api/terraform,macos
