fix: 이미지 태그 변경

--- a/k8s/sample-app/rollout.yaml
+++ b/k8s/sample-app/rollout.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: yxxunseo/sample-app:latest
+        image: yxxunseo/sample-app:test-002
         ports:
         - containerPort: 80
         resources:
